--- a/cd.html
+++ b/cd.html
@@ -1,1 +1,4 @@
-<iframe width="300" height="154" src="https://w2.countingdownto.com/3317490" frameborder="0"></iframe>
+<script language="javascript" type="text/javascript">
+var myDate = new Date();
+window.location.href="https://naozhong.net.cn/jishiqi/++light-sound-free-sleep/"+myDate.getFullYear()+"-"+myDate.getMonth()+"-"+myDate.getDay()+"/";
+</script>
