--- a/cd.html
+++ b/cd.html
@@ -1,4 +1,4 @@
 <script language="javascript" type="text/javascript">
 var myDate = new Date();
-window.location.href="https://naozhong.net.cn/jishiqi/++light-sound-free-sleep/"+myDate.getFullYear()+"-"+myDate.getMonth()+"-"+myDate.getDay()+"/";
+window.location.href="https://naozhong.net.cn/jishiqi/++light-sound-free-sleep/"+myDate.getFullYear()+"-"+(myDate.getMonth()+1)+"-"+myDate.getDate()+"/";
 </script>
