--- a/Echarts/lines3d-flights-gl (2).html
+++ b/Echarts/lines3d-flights-gl (2).html
@@ -33,7 +33,7 @@
       useDirtyRect: false
     });
     var app = {};
-    var ROOT_PATH = '';
+    var ROOT_PATH = '/Echarts/';
     var option;
 
     var uploadedDataURL = ROOT_PATH + '/flights.json';
