--- a/Echarts/line-stack (1).html
+++ b/Echarts/line-stack (1).html
@@ -45,7 +45,7 @@
     text: '通信卫星实时监测系统\n中关村国家实验室',
     textStyle:{
       fontSize:30,
-      color:'#fff',
+      color:'#000',
       fontWeight:'normal',
       fontFamily:'serif',//'Microsoft YaHei'
       }
